<resources>
    <string name="app_name">Services Implementation</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="bind_service">Bind Service</string>
    <string name="unbind_service">Unbind Service</string>
    <string name="not_generated">Not generated yet!</string>
    <string name="get_data">Get Data</string>
</resources>