<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_random_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/not_generated"
            app:layout_constraintBottom_toTopOf="@+id/btn_start_service"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_start_service"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/start_service"
            app:layout_constraintBottom_toTopOf="@+id/btn_stop_service"
            app:layout_constraintEnd_toEndOf="@+id/tv_random_number"
            app:layout_constraintStart_toStartOf="@+id/tv_random_number"
            app:layout_constraintTop_toBottomOf="@+id/tv_random_number" />

        <Button
            android:id="@+id/btn_stop_service"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:text="@string/stop_service"
            app:layout_constraintBottom_toBottomOf="@+id/btn_bind_service"
            app:layout_constraintEnd_toEndOf="@+id/btn_start_service"
            app:layout_constraintStart_toStartOf="@+id/btn_start_service"
            app:layout_constraintTop_toBottomOf="@+id/btn_start_service" />

        <Button
            android:id="@+id/btn_bind_service"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:text="@string/bind_service"
            app:layout_constraintBottom_toTopOf="@+id/btn_unbind_service"
            app:layout_constraintEnd_toEndOf="@+id/btn_stop_service"
            app:layout_constraintStart_toStartOf="@+id/btn_stop_service"
            app:layout_constraintTop_toBottomOf="@+id/btn_stop_service" />

        <Button
            android:id="@+id/btn_unbind_service"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:text="@string/unbind_service"
            app:layout_constraintBottom_toTopOf="@+id/btn_get_data"
            app:layout_constraintEnd_toEndOf="@+id/btn_bind_service"
            app:layout_constraintStart_toStartOf="@+id/btn_bind_service"
            app:layout_constraintTop_toBottomOf="@+id/btn_bind_service" />


        <Button
            android:id="@+id/btn_get_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:text="@string/get_data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_unbind_service"
            app:layout_constraintStart_toStartOf="@+id/btn_unbind_service"
            app:layout_constraintTop_toBottomOf="@+id/btn_unbind_service" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
